# Nexus

./: .gitignore  Cargo.toml  README.md
RealityReport/: NexusRealityReport.md
apps/app/: Cargo.toml
apps/app/src/: main.rs
apps/nexus_desktop/: Cargo.toml
apps/nexus_desktop/assets/: world.json
apps/nexus_desktop/src/: main.rs
assets/: world.json
codex/prompts/: 01_system_architect.md  02_builder.md  03_critic.md  04_runner.md
codex/tasks/: TASKS.md
crates/anchor/: Cargo.toml
crates/anchor/src/: lib.rs  metrics.rs
crates/anchor_core/: Cargo.toml
crates/anchor_core/src/: lib.rs
crates/app/: Cargo.toml  avatar.rs  hud.rs  perception.rs
crates/app/src/: lib.rs
crates/http_api/: Cargo.toml
crates/http_api/src/: lib.rs
crates/intent_api/: Cargo.toml
crates/intent_api/src/: lib.rs
crates/motion_compiler/: Cargo.toml
crates/motion_compiler/src/: lib.rs
crates/neural_renderer/: Cargo.toml
crates/neural_renderer/src/: lib.rs
crates/perf_hud/: Cargo.toml
crates/perf_hud/src/: lib.rs
crates/unified_field/: Cargo.toml
crates/unified_field/src/: lib.rs
crates/world_introspection/: Cargo.toml
crates/world_introspection/src/: lib.rs
crates/world_state/: Cargo.toml
crates/world_state/src/: lib.rs
docs/: ArchitectRules.md  FileIndex.md  M2_Design.md  NexusQuickstart.md  ProjectBrain.md  STATUS.md
perception/: .env.example  PerceptionFrame.schema.json  README.md  demo_depth_pose.py  requirements.txt  run_perception.ps1  run_perception.sh  server.py
perception/models/: README.md
perception/scripts/: download_movenet.py
router/: README.md  TEST_RECIPE.md  commands.py  schema.json  server.py
router/examples/: move_camera.json  set_light.json  spawn_cube.json
router/tests/: test_router_commands.py
router/ui/: index.html
runtime/: README.md  __init__.py  main.py  world.json
runtime/tests/: test_patches.py
tests/: test_runtime_main.py
