[workspace]
members = [
    "crates/anchor",
    "crates/http_api",
    "crates/world_state",
    "crates/app",
    "apps/app",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "multi-threaded"
] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
glam = "0.27"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
crossbeam-channel = "0.5"
anchor = { path = "crates/anchor" }
http_api = { path = "crates/http_api" }
app_core = { path = "crates/app" }
