[workspace]
resolver = "2"
members = [
    "apps/nexus_desktop",
    "crates/anchor",
    "crates/anchor_core",
    "crates/intent_api",
    "crates/motion_compiler",
    "crates/neural_renderer",
    "crates/perf_hud",
    "crates/unified_field",
    "crates/world_introspection",
    "crates/world_state",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "multi_threaded",
    "bevy_render",
    "bevy_sprite",
    "bevy_core_pipeline",
] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
