[package]
name = "nexus_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anchor = { path = "../../crates/anchor" }
world_state = { path = "../../crates/world_state" }
