[package]
name = "nexus_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anchor = { path = "../../crates/anchor" }
motion_compiler = { path = "../../crates/motion_compiler" }
world_state = { path = "../../crates/world_state" }
neural_renderer = { path = "../../crates/neural_renderer" }
