 [package]
 name = "intent_api"
 version = "0.1.0"
 edition = "2021"

 [dependencies]
 anyhow = { workspace = true }
 axum = { workspace = true }
 tokio = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 futures = { workspace = true }

